--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             function setupPlayer(videoUrls, drmOptions = null, posterUrl = null) {
                 const playlistItems = videoUrls.map((url, index) => {
                     return {
-                        title: "Talha's Stream - Arena Sports 4",
+                        title: "Talha's Stream - Toffee Live 1",
                         description: "You're Watching",
                         image: "https://s11.gifyu.com/images/S1l3T.jpg",
                         sources: [
